--- a/css/styles.css
+++ b/css/styles.css
@@ -25,12 +25,11 @@ h2 {
 
 body {
     font-family: 'Montserrat-Black', sans-serif;
-    position:relative
 }
 
+
 .NavBar-Title-Container {
-    padding: 3% 15%;
-    
+    padding: 3% 15% 8%;
 }
 
 
@@ -53,9 +52,11 @@ body {
 /* Title-Image */
 
 .title-img {
-    width: 60%;
-    margin-left: 20%;
+    width: 22%;
+    margin-left: 5%;
     transform: rotate(25deg);
+    position: absolute;
+    z-index: 0;
 }
 
 /* Features */
@@ -66,6 +67,8 @@ body {
     height: auto;
     text-align: center;
     background-color: white;
+    position: relative;
+    z-index: 1;
 }
 
 .features-container h3 {
